--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,19 @@ uuid = "e40f437e-72ad-4a71-a29e-78c1c8d897bb"
 authors = ["Júlio Hoffimann <julio.hoffimann@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+GeoStatsBase = "323cb8eb-fbf6-51c0-afd0-f8fba70507b2"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Variography = "04a0146e-e6df-5636-8d7f-62fa9eb0b20c"
+
 [compat]
+CpuId = "0.2"
+FFTW = "1.2"
+GeoStatsBase = "0.12"
+Variography = "0.8"
 julia = "1.4"
 
 [extras]
