--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GeoStatsBase = "323cb8eb-fbf6-51c0-afd0-f8fba70507b2"
 KrigingEstimators = "d293930c-a38c-56c5-8ebb-12008647b47a"
@@ -14,6 +15,7 @@ Variography = "04a0146e-e6df-5636-8d7f-62fa9eb0b20c"
 
 [compat]
 CpuId = "0.2"
+Distributions = "0.23"
 FFTW = "1.2"
 GeoStatsBase = "0.12"
 KrigingEstimators = "0.4"
@@ -21,7 +23,13 @@ Variography = "0.8"
 julia = "1.4"
 
 [extras]
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+QuartzImageIO = "dca85d43-d64c-5e67-8c65-017450d5d020"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+VisualRegressionTests = "34922c18-7c2a-561c-bac1-01e79b2c4c92"
 
 [targets]
-test = ["Test"]
+test = ["ImageMagick", "Pkg", "Plots", "QuartzImageIO", "Random", "Test", "VisualRegressionTests"]
